objects/INF_Case_Survey__c.object
<CustomObject>
    <label>Case Survey</label>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Case Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Surveys</relationshipLabel>
        <relationshipName>Case_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Survey_Year__c</fullName>
        <formula>Case_Survey_Month__c+&apos; &apos;+TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Case Survey Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Survey_Month__c</fullName>
        <formula>CASE(Month(DATEVALUE(CreatedDate)), 
1,&quot;Jan&quot;, 
2,&quot;Feb&quot;, 
3,&quot;Mar&quot;, 
4,&quot;Apr&quot;, 
5,&quot;May&quot;, 
6,&quot;Jun&quot;, 
7,&quot;Jul&quot;, 
8,&quot;Aug&quot;, 
9,&quot;Sep&quot;, 
10,&quot;Oct&quot;, 
11,&quot;Nov&quot;, 
12,&quot;Dec&quot;, 
&quot;None&quot;)</formula>
        <label>Case Survey Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Support_Sat_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Satisfaction No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INF_Support_Sat_Bin__c</fullName>
        <label>Support Satisfaction Bin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Solution</fullName>
                </value>
                <value>
                    <fullName>Phone Issues</fullName>
                </value>
                <value>
                    <fullName>Rep Communication Skills</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Software Activation</fullName>
                </value>
                <value>
                    <fullName>Software Defect</fullName>
                </value>
                <value>
                    <fullName>Took too long</fullName>
                </value>
                <value>
                    <fullName>Unsupported Environment</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Problem Solved</fullName>
                </value>
                <value>
                    <fullName>Fast Resolution</fullName>
                </value>
                <value>
                    <fullName>Rep Understanding of the Problem</fullName>
                </value>
                <value>
                    <fullName>Frequency of Updates</fullName>
                </value>
                <value>
                    <fullName>Excellent Service</fullName>
                </value>
                <value>
                    <fullName>Excellent Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Support_Sat_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Satisfaction Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INF_Support_sat_Comments__c</fullName>
        <label>Support Satisfaction Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INF_Recently_Created_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recently Created Survey</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>